removed localhost routes

--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@
 # Twitter (X) OAuth1 credentials
 TWITTER_API_KEY=QsYqhLu6WicLv2ELR25Joe7Zi
 TWITTER_API_SECRET=UKML65AIYQkWaWJ46d0dBAmWI90BudkdjIkG3CROp5vTd0LMyj
-TWITTER_CALLBACK_URL=http://localhost:5051/auth/x/callback
+TWITTER_CALLBACK_URL=
 
 # Database (Neon/Postgres) connection URL (leave blank to use in-memory/dev storage)
 DATABASE_URL=
