--- a/.env.local
+++ b/.env.local
@@ -8,7 +8,7 @@ TWITTER_API_SECRET=UKML65AIYQkWaWJ46d0dBAmWI90BudkdjIkG3CROp5vTd0LMyj
 TWITTER_CALLBACK_URL=
 
 # Database (Neon/Postgres) connection URL (leave blank to use in-memory/dev storage)
-DATABASE_URL=
+DATABASE_URL=postgresql://neondb_owner:npg_g4BOXLHIw9uv@ep-super-dawn-ahjzzy2h-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # Server config
 PORT=5051
