--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tanstack/react-query": "^5.60.5",
     "@wagmi/connectors": "^6.1.4",
     "@wagmi/core": "^2.22.1",
+    "axios": "^1.13.2",
     "caniuse-lite": "^1.0.30001753",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
