--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
-        sync: true
+        sync: false
       - key: SESSION_SECRET
         generateValue: false
       - key: SESSION_COOKIE_NAME
