--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
       "config": { "distDir": "dist/public" }
     }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "cleanUrls": true
 }
