--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env DOTENV_CONFIG_PATH=.env.local NODE_ENV=development tsx server/index.ts",
     "build": "vite build",
     "build:full": "vite build ; esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --target=es2022 --outfile=dist/index.js",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start": "cross-env NODE_ENV=production node -r ./server/preloadEnv.cjs dist/index.js",
     "migrate:neon": "node ./scripts/run_migration_neon.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push",
