--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "cross-env DOTENV_CONFIG_PATH=.env.local NODE_ENV=development tsx server/index.ts",
     "build": "vite build",
     "build:full": "vite build ; esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --target=es2022 --outfile=dist/index.js",
+    "prestart": "npm run build:full",
     "start": "cross-env NODE_ENV=production node -r ./server/preloadEnv.cjs dist/index.js",
     "migrate:neon": "node ./scripts/run_migration_neon.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "render-build": "npm install && npm run build"
+    "render-build": "npm install && npm run build:full"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.520.0",
@@ -99,7 +100,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "20.16.11",
+    "@types/node": "^20.19.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
